# pico-conway

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh
src/: conway.cpp  conway.h  display.cpp  display.h  main.cpp  renderer.cpp  renderer.h  test_conway.cpp
